# Cookbook

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
Alteranative/: docker-compose.yml
Alteranative/k8s/: additional.yaml  redis.yaml  web.yaml
Alteranative/web/: Dockerfile  main.py  pyproject.toml  requirements.txt
cronjob/: main.py  pyproject.toml
k8s/: cronjob.yaml
templates/: info.html.j2
web/: main.py  pyproject.toml  test_main.py
