[tool.poetry]
name = "cis1880-cookbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
redis = "^3.5.3"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
