[tool.poetry]
name = "cis188-hw4-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.95.0"
uvicorn = "0.21.1"
redis = "^3.5.3"
pytest = "^7.2.2"
requests = "^2.28.2"
pytest-mock = "^3.10.0"
Jinja2 = "3.1.2"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
